--- a/stats-preview-card-component-main/index.html
+++ b/stats-preview-card-component-main/index.html
@@ -12,21 +12,35 @@
 </head>
 <body>
 
-  <section id="card">
-    <h1>Get <span class="purple">insights</span> that help your business grow.</h1>
+<!--body-->
+
+  <div class="container">
+    <div class="words">
+    <h1 class="title">Get <span class="purple">insights</span> that help your business grow.</h1>
 
   <h3>Discover the benefits of data analytics and make better decisions regarding revenue, customer
-  experience, and overall efficiency.
+  experience, and overall efficiency.</h3>
+  
+    <p class="stats__number">10k+</p>
+    <p class ="stats__heading">Companies</p>
 
-  10k+ companies
-  314 templates
-  12m+ queries<h3>
-  </section>
+    <p class="stats__number">314</p>
+  <p class="stats__heading">Templates</p>
 
+    <p class="stats__number">12m+</p>
+    <p class="stats__heading">Queries</p>
+</div>
+
+  <div class="photo_container">
+      <img src="images/image-header-desktop.jpg" class="photo">
+
+</div>
+
+<!--attribution -->
 
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="#">Sarah Haman</a>.
   </div>
 </body>
 </html>
