changed links - removed button element

--- a/3-column-preview-card-component-main/index.html
+++ b/3-column-preview-card-component-main/index.html
@@ -18,7 +18,7 @@
     <h2>Sedans</h2>
   <p class="paragraphs">Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city
   or on your next road trip.</p>
-  <button class="button_sedan"><a href="#">Learn More</a></button>
+  <a href="#"  class="button_sedan">Learn More</a>
 </div><!--sedan_box -->
 
   <div class="suv_box">
@@ -27,7 +27,7 @@
     <h2>SUVs</h2>
   <p class="paragraphs">Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation
   and off-road adventures.</p>
-  <button class="button_suv"><a href="#">Learn More</a></button>
+  <a href="#" class="button_suv">Learn More</a>
 </div><!-- suv_box -->
 
   <div class="luxury_box">
@@ -35,7 +35,7 @@
     <h2>Luxury</h2>
   <p class="paragraphs">Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury
   rental and arrive in style.</p>
-  <button class="button_lux"><a href="#">Learn More</a></button>
+  <a href="#" class="button_lux">Learn More</a>
 </div><!-- luxury_box -->
 
 </div> <!-- main_container -->
